--- a/TrafficLights(New)/TrafficLights/TrafficLights/TrafficLights.csproj
+++ b/TrafficLights(New)/TrafficLights/TrafficLights/TrafficLights.csproj
@@ -44,6 +44,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Car.cs" />
     <Compile Include="Crossing.cs" />
     <Compile Include="Enum.cs" />
     <Compile Include="Lane.cs" />
